--- a/Assignment: Film Finder/style.css
+++ b/Assignment: Film Finder/style.css
@@ -9,21 +9,40 @@ body{
     background-color: #000;
 }
 nav{
-    height: 60px;
+    height: auto;
     width: 100%;
     background-color: #000;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    border-radius: 5px;
+
 }
 h1{
     margin: auto;
-    padding-top: 25px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-shadow: 2px 2px 5px rgb(151, 232, 151);
+    box-shadow: 0 0 10px 10px rgb(151, 232, 151);
     padding-left: 25px;
     text-transform: uppercase;
     color: #fff;
     background-color: #333;
-    height: 70px;
+    height: auto;
+}
+h1:hover{
+    padding-left: 20%;
+    background-color: #555;
+    text-shadow: 2px 2px 5px #000;
+    box-shadow: 0 0 10px 10px #000;
+    transition: all 0.5s ease-in;
+}
+#my-head{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+
 }
 input{
     cursor: pointer;
@@ -34,11 +53,16 @@ label{
 ul li{
     list-style: none;
 }
+.all-movies-home{
+    opacity: 1;
+}
 .all-movies-home:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 .best-movies{
     padding-left: 0%;
@@ -57,34 +81,81 @@ ul li{
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 .avenger-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 .xMen-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 .princess-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 .batman-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
+    opacity: 0.7;
+    transition: all 0.5s ease-in;
 }
 img{
     width: 100%;
+    border-radius: 10px;
 }
+.my-foot{
+    border: 2px solid #000;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: #888;
+   
+}
+.my-foot .ul-in-footer{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0%;
+    display: flex;
+    flex-direction: column;
+}
+.my-foot .ul-in-footer a{
+    border-radius: 15px;
+    padding: 5px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #000;
+    cursor: pointer;
+}
+.my-foot .ul-in-footer li{
+    text-transform: uppercase;
+    padding: 5px;
+}
+.my-foot .ul-in-footer a:hover{
+    background-color: rgb(88, 85, 85);
+    color: #000; 
+    font-size: large;
+    border-radius: 5px;
+    transition: all 0.5s ease-in;
+}
+
 
 
 
@@ -101,6 +172,10 @@ img{
         height: 50px;
         align-content: center;
     }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 @media (min-width: 700px) {
@@ -115,6 +190,10 @@ img{
     nav{
         height: 40px;
         align-content: center;
+    }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
     }
 }
 @media (min-width: 1024px) {
@@ -132,5 +211,9 @@ img{
     }
     nav{
         height: 30px;
+    }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
     }
 }
