--- a/Assignment: Film Finder/style.css
+++ b/Assignment: Film Finder/style.css
@@ -6,43 +6,37 @@ body{
 .search-and-header input:hover{
     opacity: 0.8;
     color: #fff;
-    background-color: #000;
+    background-color: #222;
+    transition: background-color .5s ease-in;
+}
+#search-button{
+    height: 30px;
+    margin: auto;
+    width: 80%;
+    border: 1px solid #000;
+}
+#submit-button{
+    border: 1px solid #000;
+    width: 15%s;
+    height: 30px;
+    border-radius: 5px;
 }
 nav{
-    height: auto;
+    height: 60px;
     width: 100%;
     background-color: #000;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    border-radius: 5px;
-
 }
 h1{
     margin: auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-shadow: 2px 2px 5px rgb(151, 232, 151);
-    box-shadow: 0 0 10px 10px rgb(151, 232, 151);
+    padding-top: 25px;
     padding-left: 25px;
     text-transform: uppercase;
     color: #fff;
     background-color: #333;
-    height: auto;
-}
-h1:hover{
-    padding-left: 20%;
-    background-color: #555;
-    text-shadow: 2px 2px 5px #000;
-    box-shadow: 0 0 10px 10px #000;
-    transition: all 0.5s ease-in;
-}
-#my-head{
-    margin-bottom: 15px;
-    margin-top: 15px;
-    border-radius: 10px;
-
+    height: 70px;
 }
 input{
     cursor: pointer;
@@ -53,16 +47,11 @@ label{
 ul li{
     list-style: none;
 }
-.all-movies-home{
-    opacity: 1;
-}
 .all-movies-home:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 .best-movies{
     padding-left: 0%;
@@ -81,81 +70,34 @@ ul li{
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 .avenger-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 .xMen-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 .princess-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 .batman-movies:hover{
     border: 2px #222 solid;
     cursor: pointer;
     padding-left: 3px;
     padding-top: 3px;
-    opacity: 0.7;
-    transition: all 0.5s ease-in;
 }
 img{
     width: 100%;
-    border-radius: 10px;
 }
-.my-foot{
-    border: 2px solid #000;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: #888;
-   
-}
-.my-foot .ul-in-footer{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding-left: 0%;
-    display: flex;
-    flex-direction: column;
-}
-.my-foot .ul-in-footer a{
-    border-radius: 15px;
-    padding: 5px;
-    text-decoration: none;
-    color: #fff;
-    background-color: #000;
-    cursor: pointer;
-}
-.my-foot .ul-in-footer li{
-    text-transform: uppercase;
-    padding: 5px;
-}
-.my-foot .ul-in-footer a:hover{
-    background-color: rgb(88, 85, 85);
-    color: #000; 
-    font-size: large;
-    border-radius: 5px;
-    transition: all 0.5s ease-in;
-}
-
 
 
 
@@ -172,10 +114,6 @@ img{
         height: 50px;
         align-content: center;
     }
-    .my-foot .ul-in-footer{
-        display: flex;
-        flex-direction: row;
-    }
 }
 
 @media (min-width: 700px) {
@@ -190,10 +128,6 @@ img{
     nav{
         height: 40px;
         align-content: center;
-    }
-    .my-foot .ul-in-footer{
-        display: flex;
-        flex-direction: row;
     }
 }
 @media (min-width: 1024px) {
@@ -211,9 +145,5 @@ img{
     }
     nav{
         height: 30px;
-    }
-    .my-foot .ul-in-footer{
-        display: flex;
-        flex-direction: row;
     }
 }
