--- a/Assignment: Film Finder/style.css
+++ b/Assignment: Film Finder/style.css
@@ -98,6 +98,41 @@ ul li{
 img{
     width: 100%;
 }
+.my-foot{
+    border: 2px solid #000;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: #888;
+   
+}
+.my-foot .ul-in-footer{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0%;
+    display: flex;
+    flex-direction: column;
+}
+.my-foot .ul-in-footer a{
+    border-radius: 15px;
+    padding: 5px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #000;
+    cursor: pointer;
+}
+.my-foot .ul-in-footer li{
+    text-transform: uppercase;
+    padding: 5px;
+}
+.my-foot .ul-in-footer a:hover{
+    background-color: rgb(88, 85, 85);
+    color: #000; 
+    font-size: large;
+    border-radius: 5px;
+    transition: all 0.5s ease-in;
+}
 
 
 
