--- a/Assignment: Film Finder/style.css
+++ b/Assignment: Film Finder/style.css
@@ -14,6 +14,7 @@ body{
     margin: auto;
     width: 80%;
     border: 1px solid #000;
+    border-radius: 5px;
 }
 #submit-button{
     border: 1px solid #000;
@@ -22,21 +23,40 @@ body{
     border-radius: 5px;
 }
 nav{
-    height: 60px;
+    height: auto;
     width: 100%;
     background-color: #000;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
+    border-radius: 5px;
+
 }
 h1{
     margin: auto;
-    padding-top: 25px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-shadow: 2px 2px 5px rgb(151, 232, 151);
+    box-shadow: 0 0 10px 10px rgb(151, 232, 151);
     padding-left: 25px;
     text-transform: uppercase;
     color: #fff;
     background-color: #333;
-    height: 70px;
+    height: auto;
+}
+h1:hover{
+    padding-left: 20%;
+    background-color: #555;
+    text-shadow: 2px 2px 5px #000;
+    box-shadow: 0 0 10px 10px #000;
+    transition: all 0.5s ease-in;
+}
+#my-head{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+
 }
 input{
     cursor: pointer;
@@ -102,8 +122,7 @@ img{
     border: 2px solid #000;
     border-radius: 10px;
     margin-bottom: 20px;
-    background-color: #888;
-   
+    background-color: #888;   
 }
 .my-foot .ul-in-footer{
     list-style: none;
@@ -134,8 +153,6 @@ img{
     transition: all 0.5s ease-in;
 }
 
-
-
 @media (min-width: 460px) {
     .best-movies {
       display: grid;
@@ -148,6 +165,10 @@ img{
     nav{
         height: 50px;
         align-content: center;
+    }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
     }
 }
 
@@ -163,6 +184,10 @@ img{
     nav{
         height: 40px;
         align-content: center;
+    }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
     }
 }
 @media (min-width: 1024px) {
@@ -180,5 +205,9 @@ img{
     }
     nav{
         height: 30px;
+    }
+    .my-foot .ul-in-footer{
+        display: flex;
+        flex-direction: row;
     }
 }
